--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>JS 11 HW</title>
+    <title>JS 12 HW</title>
   </head>
   <body>
     <div class="container">
@@ -18,9 +18,10 @@
         />
         <button class="submit-btn" type="submit">Search</button>
       </form>
+      <ul id="images"></ul>
+      <button type="button" class="load-more-btn">Load more</button>
+      <div class="loader"></div>
     </div>
-    <div class="loader"></div>
-    <ul id="images"></ul>
 
     <script type="module" src="./main.js"></script>
   </body>
